@@ -4,5 +4,5 @@ package edu.colorado.phet.fractionsintro.buildafraction.view.numbers;
  * @author Sam Reid
  */
 public interface NumberSceneContext {
-    void goToNextNumberLevel();
+    void nextNumberLevel();
 }
